--- a/clusters/overlays/rosa/patch-applicationset-repo-revision.yaml
+++ b/clusters/overlays/rosa/patch-applicationset-repo-revision.yaml
@@ -3,4 +3,4 @@
   value: 'https://github.com/rh-intelligent-application-practice/openshift-cluster-bootstrap-gitops.git'
 - op: replace
   path: /spec/template/spec/source/targetRevision
-  value: main
+  value: row62_AutomateInitialPipeline
