--- a/components/operators/openshift-gitops/instance/base/kustomization.yaml
+++ b/components/operators/openshift-gitops/instance/base/kustomization.yaml
@@ -1,10 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace:
-  openshift-gitops
+namespace: openshift-gitops
 
-  # - namespace.yaml
 resources:
   - cluster-role-binding.yaml
   - openshift-gitops-cr.yaml
