--- a/components/argocd/apps/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/apps/base/cluster-operators-applicationset.yaml
@@ -23,12 +23,12 @@ spec:
         automated:
           prune: false
           selfHeal: true
-        # retry:
-        #   limit: 2
-        #   backoff:
-        #     duration: 5s
-        #     factor: 2
-        #     maxDuration: 10m
+        retry:
+          limit: 5
+          backoff:
+            duration: 5s
+            factor: 2
+            maxDuration: 20m
       source:
         repoURL: patch-me-see-clusters-overlays
         targetRevision: patch-me-see-clusters-overlays
