--- a/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
+++ b/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
@@ -51,11 +51,11 @@
       values:
         name: sealed-secrets-operator
         path: components/operators/sealed-secrets-operator/overlays/default
-    - cluster: local
-      url: https://kubernetes.default.svc
-      values:
-        name: seldon-operator
-        path: components/operators/seldon/operator/overlays/stable
+    # - cluster: local
+    #   url: https://kubernetes.default.svc
+    #   values:
+    #     name: seldon-operator
+    #     path: components/operators/seldon/operator/overlays/stable
     - cluster: local
       url: https://kubernetes.default.svc
       values:
