--- a/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
+++ b/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
@@ -16,11 +16,11 @@
       values:
         name: elasticsearch-operator
         path: components/operators/elasticsearch/operator/overlays/stable
-    - cluster: local
-      url: https://kubernetes.default.svc
-      values:
-        name: opendatahub-operator
-        path: components/operators/opendatahub/operator/overlays/stable
+    # - cluster: local
+    #   url: https://kubernetes.default.svc
+    #   values:
+    #     name: opendatahub-operator
+    #     path: components/operators/opendatahub/operator/overlays/stable
     - cluster: local
       url: https://kubernetes.default.svc
       values:
