--- a/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
+++ b/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
@@ -11,11 +11,11 @@
       values:
         name: crunchy-postgres-operator
         path: components/operators/crunchy-postgres/operator/overlays/v5
-    - cluster: local
-      url: https://kubernetes.default.svc
-      values:
-        name: elasticsearch-operator
-        path: components/operators/elasticsearch/operator/overlays/stable
+    # - cluster: local
+    #   url: https://kubernetes.default.svc
+    #   values:
+    #     name: elasticsearch-operator
+    #     path: components/operators/elasticsearch/operator/overlays/stable
     # - cluster: local
     #   url: https://kubernetes.default.svc
     #   values:
@@ -26,11 +26,11 @@
       values:
         name: openshift-data-foundation-operator
         path: components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.12
-    - cluster: local
-      url: https://kubernetes.default.svc
-      values:
-        name: openshift-logging-operator
-        path: components/operators/openshift-logging/aggregate/overlays/default
+    # - cluster: local
+    #   url: https://kubernetes.default.svc
+    #   values:
+    #     name: openshift-logging-operator
+    #     path: components/operators/openshift-logging/aggregate/overlays/default
     - cluster: local
       url: https://kubernetes.default.svc
       values:
