--- a/components/operators/openshift-gitops/operator/base/kustomization.yaml
+++ b/components/operators/openshift-gitops/operator/base/kustomization.yaml
@@ -4,4 +4,7 @@ kind: Kustomization
 namespace: openshift-operators
 
 resources:
+  - enable-console-plugin-job.yaml
+  - enable-console-plugin-rbac.yaml
+  - enable-console-plugin-sa.yaml
   - openshift-gitops-operator-subscription.yaml
