--- a/components/operators/openshift-gitops/operator/base/enable-console-plugin-job.yaml
+++ b/components/operators/openshift-gitops/operator/base/enable-console-plugin-job.yaml
@@ -9,7 +9,7 @@ spec:
   template:
     spec:
       containers:
-        - name: labeler
+        - name: patcher
           image: image-registry.openshift-image-registry.svc:5000/openshift/cli
           env:
             - name: PLUGIN_NAME
