--- a/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
+++ b/components/argocd/apps/overlays/rhdp-4.12/patch-operators-list.yaml
@@ -21,11 +21,11 @@
     #   values:
     #     name: opendatahub-operator
     #     path: components/operators/opendatahub/operator/overlays/stable
-    - cluster: local
-      url: https://kubernetes.default.svc
-      values:
-        name: openshift-data-foundation-operator
-        path: components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.12
+    # - cluster: local
+    #   url: https://kubernetes.default.svc
+    #   values:
+    #     name: openshift-data-foundation-operator
+    #     path: components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.12
     # - cluster: local
     #   url: https://kubernetes.default.svc
     #   values:
@@ -49,6 +49,11 @@
     - cluster: local
       url: https://kubernetes.default.svc
       values:
+        name: rhods-operator
+        path: components/operators/rhods-operator/operator/overlays/stable
+    - cluster: local
+      url: https://kubernetes.default.svc
+      values:
         name: sealed-secrets-operator
         path: components/operators/sealed-secrets-operator/overlays/default
     - cluster: local
@@ -56,8 +61,8 @@
       values:
         name: seldon-operator
         path: components/operators/seldon/operator/overlays/stable
-    - cluster: local
-      url: https://kubernetes.default.svc
-      values:
-        name: web-terminal-operator
-        path: components/operators/web-terminal-operator/operator/overlays/fast
+    # - cluster: local
+    #   url: https://kubernetes.default.svc
+    #   values:
+    #     name: web-terminal-operator
+    #     path: components/operators/web-terminal-operator/operator/overlays/fast
